# RAG-Chatbot-Playground

./: README.md  main.py  pyproject.toml  rag_playground.ipynb
core/: model_config.py  vector_store.py
