[project]
name = "langchain-playground"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0", # for chroma db
    "langchain-core>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "pypdf>=6.13.2", # document loaders internally use this
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1", # https://huggingface.co/sentence-transformers
    "unstructured[pdf]>=0.23.1", # for pdf document loaders
]
