[project]
name = "langchain-playground"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0", # for chroma db
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "pypdf>=6.13.2", # document loaders internally use this
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1", # https://huggingface.co/sentence-transformers
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "unstructured[pdf]>=0.23.1", # for pdf document loaders
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
